# remoteAPI

./: .gitmodules  CMakeLists.txt  README.md  remoteapi.cpp  remoteapi.hpp
cmake/: AddLib.cmake
include/: remoteapi.hpp
src/: CMakeLists.txt  remoteapi.cpp
src/webrtc_moudle/: video_codec_info.hpp
src/webrtc_moudle/rtc/: device_video_capturer.cpp  device_video_capturer.hpp  native_buffer.cpp  native_buffer.hpp  scalable_track_source.cpp  scalable_track_source.hpp  screen_video_capturer.cpp  screen_video_capturer_cpp  screen_video_capturer_hpp  video_encoder_factory.cpp  video_encoder_factory.hpp  video_track_receiver.hpp
test_remote_ui/: CMakeLists.txt  dialog.cpp  dialog.hpp  dialog.ui
test_send/: CMakeLists.txt  test_send.cpp
test_send_ui/: CMakeLists.txt  dialog.hpp  dialog.ui
